fixed article middle pic position mobile version

--- a/css/article.css
+++ b/css/article.css
@@ -188,7 +188,9 @@
     .articleSubCommunityTeaserContainers {
         width: auto;
     }
-    .articleMiddlePicWrapper {}
+    .articleMiddlePicWrapper {
+        width: 80%;
+    }
     .authorCardWrapper {
         flex-direction: column;
     }
